objects/Sale_Payment__c.object
<CustomObject>
    <description>Contains payments related to Sale object. There can be multiple Sale Payments for a single sale. Detail object of Sale.</description>
    <label>Sale Payment</label>
    <nameField>
        <displayFormat>S-PAY-{00000000}</displayFormat>
        <label>Sale Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sale Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Sale__c</fullName>
        <description>Parent Sale. Is calculated in Sale Inbound Flow.</description>
        <label>Sale</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Sale Payments</relationshipLabel>
        <relationshipName>Sale_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount paid with the payment mode specified on the record. Alimented by Sale Inbound Flow.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Sale Payment unique identifier.</description>
        <label>External Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Payment mode used for the related sum. Alimented by Sale Inbound Flow.</description>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCO</fullName>
                </value>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>AMX</fullName>
                </value>
                <value>
                    <fullName>AVO</fullName>
                </value>
                <value>
                    <fullName>CARD</fullName>
                </value>
                <value>
                    <fullName>CASH</fullName>
                </value>
                <value>
                    <fullName>CASH_ON_DELIVERY</fullName>
                </value>
                <value>
                    <fullName>CCA</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CLI</fullName>
                </value>
                <value>
                    <fullName>COF</fullName>
                </value>
                <value>
                    <fullName>CUP</fullName>
                </value>
                <value>
                    <fullName>DET</fullName>
                </value>
                <value>
                    <fullName>DIN</fullName>
                </value>
                <value>
                    <fullName>FIN</fullName>
                </value>
                <value>
                    <fullName>JCB</fullName>
                </value>
                <value>
                    <fullName>PGM</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>REP</fullName>
                </value>
                <value>
                    <fullName>TAD</fullName>
                </value>
                <value>
                    <fullName>TAE</fullName>
                </value>
                <value>
                    <fullName>TRANSFERT</fullName>
                </value>
                <value>
                    <fullName>VAD</fullName>
                </value>
                <value>
                    <fullName>ESP</fullName>
                </value>
                <value>
                    <fullName>BCB</fullName>
                </value>
                <value>
                    <fullName>PAYPAL</fullName>
                </value>
                <value>
                    <fullName>CREDIT CARD</fullName>
                </value>
                <value>
                    <fullName>APPLEPAY_EXPRESS</fullName>
                </value>
                <value>
                    <fullName>PAYPAL EXPRESS</fullName>
                </value>
                <value>
                    <fullName>BANK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>